# jobhunter-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GUIDE_INSTALLATION.md  Makefile  README.md  REPORT_Matthieu.md  SKILL.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 560940d42916_add_multi_country_salary_fields.py  7e707fc320ee_initial_schema.py  9daad53484ab_add_company_research_fields.py  cb0338633b06_add_evaluation_json_and_archetype_to_.py
analysis/: profile_analyzer.py
api/: dependencies.py  main.py
api/auth/: router.py  schemas.py  service.py
api/middleware/: error_handler.py
api/routes/: applications.py  health.py  jobs.py  match.py  scan.py  settings.py
cron/: jobhunter-cron
docs/: GUIDE.md
docs/plans/: 2026-03-24-multi-tenant-backend.md
scripts/: cleanup_false_remote.py  init-profile.sh  mcp_collect.py
src/: main.py
src/analysis/: company_researcher.py  (+2 more)
static/: style.css
templates/: base.html  forgot_password.html  index.html  job_detail.html  login.html  register.html  reset_password.html  settings.html
tests/: conftest.py  test_archetypes.py  test_career_pages.py  test_cli.py  test_company_researcher.py  test_email.py  test_generators.py  test_gmail_scraper.py  test_importers.py  test_llm.py  test_matching.py  test_mcp_bridge.py  test_models_multicountry.py  test_multicountry_integration.py  test_recruiter_finder.py  test_reset_and_semaphore.py  test_responder.py  test_salary_normalizer.py  test_scheduler.py  test_scorer_deterministic_score.py  test_scorer_multibloc.py  test_scorer_multicountry.py  test_scorer_parsing_edge_cases.py  test_scrapers.py  test_scrapers_multicountry.py  test_story_bank.py  test_telegram.py  test_translate.py
(+106 files in other folders)
